syntax = "proto3";

package errdef;

option go_package = "github.com/shiwano/errdef/examples/protobuf;main";

// Error represents a serialized error in Protocol Buffers format.
message Error {
  string message = 1;
  string kind = 2;
  map<string, FieldValue> fields = 3;
  repeated StackFrame stack = 4;
  repeated Cause causes = 5;
}

// FieldValue represents a field value that can be of various types.
message FieldValue {
  oneof value {
    string string_value = 1;
    int64 int_value = 2;
    double double_value = 3;
    bool bool_value = 4;
    bytes bytes_value = 5;
  }
}

// StackFrame represents a single frame in a stack trace.
message StackFrame {
  string func = 1;
  string file = 2;
  int32 line = 3;
}

// Cause represents a wrapped error cause.
message Cause {
  string message = 1;
  string kind = 2;
  string type = 3;
  map<string, FieldValue> fields = 4;
  repeated StackFrame stack = 5;
  repeated Cause causes = 6;
}
